refactor(parser-jvm): revert Java 17-specific changes