@@ -1,6 +1,7 @@
 package dev.hilla.parser.core;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import io.github.classgraph.ClassInfo;
 import io.github.classgraph.ScanResult;
@@ -12,7 +13,9 @@ public class ProjectScanResult {
         this.result = result;
     }
 
-    public List<? extends Class<?>> getClassesWithAnnotation(String annotation) {
-        return result.getClassesWithAnnotation(annotation).stream().map(ClassInfo::loadClass).toList();
+    public List<? extends Class<?>> getClassesWithAnnotation(
+            String annotation) {
+        return result.getClassesWithAnnotation(annotation).stream()
+                .map(ClassInfo::loadClass).collect(Collectors.toList());
     }
 }
