@@ -1,6 +1,7 @@
 package dev.hilla.parser.plugins.backbone;
 
 import java.util.Collection;
+import java.util.stream.Collectors;
 
 import javax.annotation.Nonnull;
 
@@ -25,15 +26,16 @@ public final class EndpointPlugin extends AbstractPlugin<PluginConfiguration> {
     @Nonnull
     @Override
     public NodeDependencies scan(@Nonnull NodeDependencies nodeDependencies) {
-        if (nodeDependencies.getNode() instanceof RootNode rootNode) {
+        if (nodeDependencies.getNode() instanceof RootNode) {
+            var rootNode = (RootNode) nodeDependencies.getNode();
             var endpointAnnotationName = getStorage().getParserConfig()
                     .getEndpointAnnotationName();
             var endpoints = rootNode.getSource()
-                    .getClassesWithAnnotation(endpointAnnotationName).stream().map(ClassInfoModel::of).toList();
+                    .getClassesWithAnnotation(endpointAnnotationName).stream()
+                    .map(ClassInfoModel::of).collect(Collectors.toList());
             checkIfJavaCompilerParametersFlagIsEnabled(endpoints);
-            return nodeDependencies
-                    .appendChildNodes(endpoints.stream()
-                            .filter(ClassInfoModel::isNonJDKClass)
+            return nodeDependencies.appendChildNodes(
+                    endpoints.stream().filter(ClassInfoModel::isNonJDKClass)
                             .map(EndpointNode::of));
         }
         return nodeDependencies;
@@ -41,7 +43,8 @@ public final class EndpointPlugin extends AbstractPlugin<PluginConfiguration> {
 
     @Override
     public void enter(NodePath<?> nodePath) {
-        if (nodePath.getNode() instanceof EndpointNode endpointNode) {
+        if (nodePath.getNode() instanceof EndpointNode) {
+            var endpointNode = (EndpointNode) nodePath.getNode();
             var name = endpointNode.getSource().getSimpleName();
             endpointNode.setTarget(new Tag().name(name));
         }
@@ -59,8 +62,7 @@ public final class EndpointPlugin extends AbstractPlugin<PluginConfiguration> {
 
     private static void checkIfJavaCompilerParametersFlagIsEnabled(
             Collection<ClassInfoModel> endpoints) {
-        endpoints.stream()
-                .flatMap(ClassInfoModel::getMethodsStream)
+        endpoints.stream().flatMap(ClassInfoModel::getMethodsStream)
                 .flatMap(MethodInfoModel::getParametersStream).findFirst()
                 .ifPresent((parameter) -> {
                     if (parameter.getName() == null) {
